test/error/error.input126.zc
Unknown variable or function:ptr on line 7
